deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: akash-deployment

spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: akash-app

  template:
    metadata:
      labels:
        app: akash-app
    
    spec:
      containers:
        - name: akashapp
          image: akashpendyala/akashdevops1:multistageee
          ports:
            - containerPort: 3000
          #env:
          #- name: env
              #valueFrom:
                #configMapKeyRef:
                 # name: app-config
                  #key: APP_ENV

          #   - name: APP_NAME
          #    valueFrom:
          #      configMapKeyRef:
          #        name: app-config
          #        key: APP_NAME

          volumeMounts:
            - name: configvolume
              mountPath: /config

            - name: secretvolume
              mountPath: /secret

            - name: pvc-storage
              mountPath: /data

      volumes:
        - name: configvolume
          configMap:
            name: app-config

        - name: secretvolume
          secret:
            secretName: my-secret
        
        - name: pvc-storage
          persistentVolumeClaim:
            claimName: my-pvc
