pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: akash-app
spec:
  containers:
    - name: app
      image: akashpendyala/akashdevops1:multistageee
      ports:
        - containerPort: 3000
