probe.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: probe-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-probe
  
  template:
    metadata:
      labels:
        app: nginx-probe
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80

          livenessProbe:
            httpGet:
              path: /health
              port: 80

            initialDelaySeconds: 5
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 5
            periodSeconds: 5
