rolling.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rolling-test
spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  selector:
    matchLabels:
      app: rolling-app

  template:
    metadata:
      labels: 
        app: rolling-app
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80
