statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-stateful
spec:
  serviceName: nginx-headless
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest

          volumeMounts:
            - name: nginx-data
              mountPath: /data

  volumeClaimTemplates:
    - metadata:
        name: nginx-data

      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 500Mi
