service.yml
apiVersion: v1
kind: Service
metadata:
  name: akash-service
spec:
  type: NodePort
  selector:
    app: akash-app
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30007
