ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: akash-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: akash.local.com
      http:
        paths:
          - path: /akki
            pathType: Prefix
            backend:
              service:
                name: akash-service
                port:
                  number: 80
